# clawgatekeeper

./: .gitignore  add_delete_column.sql  add_scope_registry.sql  add_scope_registry_phase1.sql  cleanup_ghosts.sql  cleanup_noise.sql  clear_database.sql  delete_ghost_files.sql  fix_get_folder_contents.sql  fix_get_root_items.sql  fix_nulls.sql  fix_rls.sql  fix_rls_update.sql  fix_rpc.sql  fix_schema.sql  fix_system_status.sql  force_access.sql  force_frontend_access.sql  install_gatekeeper.reg  reset_db.sql  run_frontend.bat  supabase_schema.sql  supabase_schema_v2.sql  upgrade_schema.sql
cpp_service/: CMakeLists.txt  GateKeeperService.cpp  README.md  build.bat  build_cmake.bat  build_console.bat  build_detailed.bat  build_local.bat  build_simple.bat
flutter_gac/: MIGRATION_GUIDE.md  QUICK_START.md  README.md  pubspec.yaml  run_flutter.bat  run_flutter.sh
flutter_gac/lib/: main.dart
flutter_gac/lib/models/: file_item.dart  scope.dart
flutter_gac/lib/providers/: theme_provider.dart
flutter_gac/lib/screens/: home_screen.dart
flutter_gac/lib/services/: supabase_service.dart
flutter_gac/lib/widgets/: file_explorer.dart
flutter_gac/web/: index.html  manifest.json
flutter_gac/windows/runner/: main.cpp
frontend GAC/: check_missing_folder.js  debug_db.js  index.html  package-lock.json  package.json  purge_and_reset.js  purge_robust.js  set_online.js  test_conn.js  test_insert.js  test_rpc.js  test_rpc_root.js
frontend GAC/src/: App.tsx
frontend GAC/src/components/: ControlSwitch.tsx  FileExplorer.tsx  (+2 more)
my_hidden_data/first folder/: nayan.txt
(+3 files in other folders)
